add pet delete task
